<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/small_margin_default"
        android:scaleType="fitXY"
        android:src="@drawable/ic_medical_research_rafiki"
        app:layout_constraintBottom_toTopOf="@id/tv_avaliacao_paciente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tv_avaliacao_paciente"
        style="@style/CS_textview_home_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avaliacaoPaciente"
        app:icon="@drawable/ic_person_circle_outlined"
        app:layout_constraintBottom_toTopOf="@+id/tv_info_metodologia"
        app:layout_constraintEnd_toEndOf="@id/tv_add_paciente"
        app:layout_constraintStart_toStartOf="@id/tv_add_paciente" />

    <Button
        android:id="@+id/tv_info_metodologia"
        style="@style/CS_textview_home_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infoMetodologia"
        app:icon="@drawable/ic_info_circle_outlined"
        app:layout_constraintBottom_toTopOf="@id/tv_trabalhos_academicos"
        app:layout_constraintEnd_toEndOf="@id/tv_add_paciente"
        app:layout_constraintStart_toStartOf="@id/tv_add_paciente" />

    <Button
        android:id="@+id/tv_trabalhos_academicos"
        style="@style/CS_textview_home_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trabalhosAcademicos"
        app:icon="@drawable/ic_books_outlined"
        app:layout_constraintBottom_toTopOf="@id/tv_add_paciente"
        app:layout_constraintEnd_toEndOf="@id/tv_add_paciente"
        app:layout_constraintStart_toStartOf="@id/tv_add_paciente" />

    <Button
        android:id="@+id/tv_add_paciente"
        style="@style/CS_textview_home_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addPaciente"
        app:icon="@drawable/ic_add_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>